2004-09-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS:
	updated for 2.4.19

	* NEWS:
	* configure.in:
	increased version to 2.5.12
	released 2.5.11

	* NEWS:
	* configure.in:
	updated for 2.5.10 release

2004-09-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/geometry.c (get_page_offset):
	(get_page_offset_rectangle):
	(get_absolute_geometry):
	new functions

	* fvwm/virtual.c (CMD_GotoPage):
	* fvwm/move_resize.c (__move_window):
	* fvwm/virtual.c (CMD_GotoPage):
	(get_page_arguments):
	new options wrapx, wrapy, nodesklimitx, nodesklimity to MoveToPage
	command

2004-09-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Flocale.c (FlocaleGetNameProperty):
	fixed freeing uninitialized pointer

2004-09-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/conditional.c (select_cmd):
	(direction_cmd):
	(CMD_NoWindow):
	(CMD_All):
	fixed conditional return code in Pick, PointerWindow, ThisWindow, All,
	WindowId and Direction commands; fixes break from these commands

	* fvwm/geometry.c (get_shaded_geometry):
	shading geometry fix for windows without decoration

	* libs/FScreen.c (XineramaQueryExtension):
	fixed xinerama crash

2004-09-04  Scott Smedley  <scottie7@tpg.com.au>

	* configure.in:
	Parse man pages with config.status so man pages have correct date.
	Man pages also specify FVWM version that they relate to.

	The following man pages were renamed to have a .in suffix.
	ie. bin/fvwm-bug.1 renamed to bin/fvwm-bug.1.in

	* bin/fvwm-bug.1:
	* bin/fvwm-config.1:
	* bin/fvwm-convert-2.2.1:
	* bin/fvwm-convert-2.4.1:
	* bin/fvwm-convert-2.6.1:
	* bin/fvwm-menu-desktop.1:
	* bin/fvwm-root.1:
	* modules/FvwmAnimate/FvwmAnimate.1:
	* modules/FvwmAuto/FvwmAuto.1:
	* modules/FvwmBacker/FvwmBacker.1:
	* modules/FvwmBanner/FvwmBanner.1:
	* modules/FvwmButtons/FvwmButtons.1:
	* modules/FvwmCommand/FvwmCommand.1:
	* modules/FvwmConsole/FvwmConsole.1:
	* modules/FvwmConsole/FvwmConsoleC.pl.1:
	* modules/FvwmCpp/FvwmCpp.1:
	* modules/FvwmDragWell/FvwmDragWell.1: