@@ -82,6 +82,7 @@ static void init_win_manager(int id)
 	globals.managers[id].bindings[MOUSE] = ParseMouseEntry(DEFAULT_MOUSE);
 	globals.managers[id].we_are_drawing = 1;
 	globals.managers[id].showonlyiconic = 0;
+ 	globals.managers[id].showonlyfocused = 0;
 	globals.managers[id].shownoiconic = 0;
 	globals.managers[id].showtransient = 0;
 	globals.managers[id].relief_thickness = 2;
