@@ -1,3 +1,15 @@
+2004-09-30  Rafal Bisingier <ravbc@man.poznan.pl>
+
+	* fvwm/commands.h:
+	* fvwm/events.c:
+	* fvwm/functable.c:
+	* fvwm/fvwm.1.in:
+	* fvwm/fvwm.c:
+	* fvwm/screen.h:
+	* fvwm/virtual.c:
+	* perllib/FVWM/Commands.pm:
+	new command EdgeLeaveCommand
+
 2004-09-30  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* NEWS:
